fix(backend): last changes
