# package/backend/dist/swagger.json
@@ -174,6 +174,41 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"UpdateUserDTO": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"nickname": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					},
+					"token": {
+						"type": "string"
+					},
+					"isValid": {
+						"type": "boolean"
+					},
+					"roleId": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CategoryDTO": {
 				"properties": {
 					"id": {
@@ -586,41 +621,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"UpdateUserDTO": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"nickname": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"image": {
-						"type": "string"
-					},
-					"token": {
-						"type": "string"
-					},
-					"isValid": {
-						"type": "boolean"
-					},
-					"roleId": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"id"
-				],
-				"type": "object",
-				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -775,6 +775,40 @@
 			}
 		},
 		"/api/v1/auth/me": {
+			"put": {
+				"operationId": "UpdateMe",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateUserDTO"
+							}
+						}
+					}
+				}
+			},
 			"get": {
 				"operationId": "GetMe",
 				"responses": {
@@ -1702,6 +1736,55 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/v1/threads/search": {
+			"get": {
+				"operationId": "Search",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ThreadPaginatedDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Thread"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "query",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "page",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/api/v1/threads/{id}": {
