# package/backend/src/controller/auth.controller.ts
@@ -6,7 +6,7 @@ import { RegisterUserDTO } from "../dto/user/register.user.dto";
 import { UserCreatedDTO } from "../dto/user/created.user.dto";
 import { HttpStatus } from "../utils/enum/http.status";
 import { LoginUserDTO } from "../dto/user/login.request.dto";
-import { Controller, Route, Post, Body, Path, Tags,Get, Request, Security } from 'tsoa'
+import { Controller, Route, Post, Body, Path, Tags,Get, Request, Security, Put, Patch } from 'tsoa'
 import { LoginResponseDTO } from "../dto/user/login.response.dto";
 import { ResponseDTO } from "../dto/general/response.dto";
 import { UpdateUserDTO } from "../dto/user/update.user.dto";
@@ -14,6 +14,8 @@ import { validateOrReject } from "class-validator";
 import { ForgetPassDTO } from "../dto/user/forgetpass.dto";
 import { ChangePassDTO } from "../dto/user/changepass.dto";
 import { UserDTO } from "../dto/user/user.dto";
+import { UserError } from "../error/User.error";
+import { UpdateMeDTO } from "../dto/user/updateMe.dto";
 
 
 
@@ -74,6 +76,23 @@ export class AuthController extends Controller {
 
 
     @Security('jwt')
+    @Put('/auth/me')
+    public async updateMe(@Request() request: ExpressRequest, @Body() body: UpdateUserDTO): Promise<UserDTO> {
+        const { sub } = request.user;
+        const dto = plainToInstance(UpdateMeDTO, body, { excludeExtraneousValues: true });
+        //Valido el body
+        await validateOrReject(dto, { validationError: { target: false } });
+
+        if(dto.id != sub) throw new UserError("USER_NOT_AUTHORIZED","You can't update another user than yourself");
+        const user = await this.userService.updateMe(sub, dto);
+        //Mapeo User a UserDTO
+        const userDTO = plainToInstance(UserDTO, user, { excludeExtraneousValues: true });
+        this.setStatus(HttpStatus.OK)
+        return userDTO;
+    }
+
+
+    @Security('jwt')
     @Get('/auth/me')
     public async getMe(@Request() request: ExpressRequest): Promise<UserDTO> {
         const { sub } = request.user;
@@ -83,5 +102,8 @@ export class AuthController extends Controller {
         this.setStatus(HttpStatus.OK)
         return userDTO;
     }
+
+
+    
 
 }
