# package/backend/src/controller/thread.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Route, Tags, Response, Body,Get,Post, Put,Path, Delete, Security, Query, Request } from "tsoa";
+import { Controller, Route, Tags, Response, Body, Get, Post, Put, Path, Delete, Security, Query, Request } from "tsoa";
 import sequelize from '../db/config/db.config'
 import { ThreadService } from "../service/thread.service";
 import { IPaginated } from "../interfaces/IPaginated";
@@ -23,16 +23,16 @@ export class ThreadController extends Controller {
     constructor() {
         super();
         this.threadService = new ThreadService(sequelize);
-        
+
     }
 
 
     @Get()
     @Response("200", "Success")
     @Response(HttpStatus.NOT_FOUND, "No threads found")
-    public async getAll(@Query() page?: number, @Query() limit?: number, @Query() category?:string, @Query() author?:string, ): Promise<ThreadPaginatedDTO> {
-        const threads = await this.threadService.getThreadsByActivityAndFilters(page,limit,{category,author});
-        const threadsDto = plainToInstance(ThreadPaginatedDTO, threads, {enableImplicitConversion:true, excludeExtraneousValues: true});
+    public async getAll(@Query() page?: number, @Query() limit?: number, @Query() category?: string, @Query() author?: string,): Promise<ThreadPaginatedDTO> {
+        const threads = await this.threadService.getThreadsByActivityAndFilters(page, limit, { category, author });
+        const threadsDto = plainToInstance(ThreadPaginatedDTO, threads, { enableImplicitConversion: true, excludeExtraneousValues: true });
         return threadsDto;
     }
 
@@ -41,12 +41,12 @@ export class ThreadController extends Controller {
     @Response(HttpStatus.BAD_REQUEST, "Validation Error")
     @Response(HttpStatus.UNPROCCESSABLE_ENTITY, "Validation Failed")
     @Security("jwt")
-    public async create(@Body() body, @Request() req:ExpressRequest): Promise<ThreadDTO> {
+    public async create(@Body() body, @Request() req: ExpressRequest): Promise<ThreadDTO> {
         const thread = plainToInstance(ThreadCreateDTO, body, { excludeExtraneousValues: true });
-       
-        
+
+
         //Validate body
-        await validateOrReject(thread,{ validationError: { target: false } })
+        await validateOrReject(thread, { validationError: { target: false } })
         thread.userId = req.user.sub;
         /*TODO: Recibir del front el id del usuario o asignarlo desde el token?
          Validar que sea el mismo user que el token?*/
@@ -55,6 +55,15 @@ export class ThreadController extends Controller {
         const threadDto = plainToInstance(ThreadDTO, threadCreated, { excludeExtraneousValues: true });
         this.setStatus(HttpStatus.CREATED);
         return threadDto;
+    }
+
+
+    @Get("/search/")
+    @Response(HttpStatus.OK, "Success")
+    public async search(@Query() query: string, @Query() page?: number, @Query() limit?: number): Promise<ThreadPaginatedDTO> {
+        const threads = await this.threadService.findByQuery(query, page, limit);
+        const threadsDto = plainToInstance(ThreadPaginatedDTO, threads, { enableImplicitConversion: true, excludeExtraneousValues: true });
+        return threadsDto;
     }
 
 
@@ -72,26 +81,27 @@ export class ThreadController extends Controller {
     @Response(HttpStatus.FORBIDDEN, "Thread not owner error")
     @Response(HttpStatus.NOT_FOUND, "Thread not found error")
     @Security("jwt")
-    public async update(@Path() id: number, @Body() body, @Request() req:ExpressRequest): Promise<ResponseDTO> {
+    public async update(@Path() id: number, @Body() body, @Request() req: ExpressRequest): Promise<ResponseDTO> {
         const thread = plainToInstance(ThreadUpdateDTO, body, { excludeExtraneousValues: true });
         //Validate body
-        await validateOrReject(thread,{ validationError: { target: false } })
+        await validateOrReject(thread, { validationError: { target: false } })
         const response = await this.threadService.updateThread(id, thread, req.user.sub);
         return response;
     }
 
-    
+
 
     @Delete("/{id}")
     @Response(HttpStatus.OK, "Success")
     @Response(HttpStatus.FORBIDDEN, "Thread not owner error")
     @Security("jwt")
-    public async delete(@Path() id: number, @Request() req:ExpressRequest): Promise<ResponseDTO> {
+    public async delete(@Path() id: number, @Request() req: ExpressRequest): Promise<ResponseDTO> {
         const response = await this.threadService.deleteThread(id, req.user);
         return response;
     }
 
 
+   
 
 
 }
